# mongoclaw

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  reference.txt
configs/agents/: content_summarizer.yaml  sentiment_analyzer.yaml  ticket_classifier.yaml
deploy/helm/mongoclaw/: Chart.yaml  values.yaml
deploy/helm/mongoclaw/templates/: _helpers.tpl  agents-configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  secret.yaml  service.yaml  serviceaccount.yaml
deploy/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pdb.yaml  secret.yaml  service.yaml  serviceaccount.yaml
deploy/mongodb/: init-replica.js
deploy/prometheus/: prometheus.yml
sdk-nodejs/: package-lock.json  package.json
sdk-nodejs/src/: client.ts  index.ts  types.ts
src/mongoclaw/: __init__.py  __main__.py
src/mongoclaw/agents/: __init__.py  hot_reload.py  loader.py  models.py  store.py  validator.py
src/mongoclaw/ai/: __init__.py  cache.py  cost_tracker.py  prompt_engine.py  provider_router.py  rate_limiter.py  response_parser.py
src/mongoclaw/api/: __init__.py  app.py  dependencies.py
src/mongoclaw/api/v1/: agents.py  catalog.py  executions.py  health.py  webhooks.py
src/mongoclaw/cli/: __init__.py  agents.py  main.py  server.py  test.py
src/mongoclaw/core/: __init__.py  config.py  exceptions.py  runtime.py  types.py
src/mongoclaw/dispatcher/: __init__.py  agent_dispatcher.py  routing.py  work_item.py
src/mongoclaw/observability/: __init__.py  logging.py  metrics.py  middleware.py  tracing.py
src/mongoclaw/policy/: __init__.py  evaluator.py
src/mongoclaw/queue/: __init__.py  base.py  consumer_group.py  dead_letter.py  redis_stream.py  serialization.py
src/mongoclaw/resilience/: __init__.py  circuit_breaker.py  health.py  retry.py  shutdown.py
src/mongoclaw/result/: __init__.py  idempotency.py  strategies.py  writer.py
src/mongoclaw/sdk/: __init__.py  async_client.py  client.py
src/mongoclaw/security/: __init__.py  audit.py  auth.py  pii_redactor.py  rbac.py
src/mongoclaw/security/secrets/: __init__.py  aws.py  base.py  env.py  vault.py
src/mongoclaw/watcher/: __init__.py  change_stream.py  event_matcher.py  leader_election.py  resume_token.py
src/mongoclaw/worker/: __init__.py  agent_worker.py  backpressure.py  executor.py  pool.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py
tests/integration/: __init__.py  test_agent_store.py
tests/unit/: __init__.py  test_agents_models.py  test_prompt_engine.py  test_response_parser.py
ui/: README.md  app.js  index.html  styles.css
